--- a/QuickNotes/app/src/main/res/layout/fragment_reminder_detail.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_reminder_detail.xml
@@ -35,14 +35,27 @@
             android:layout_marginTop="10dp"
             android:id="@+id/reminder_date_description"
             android:text="Example Date Text"/>
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-            android:id="@+id/reminder_completed_description"
-            android:text="Example Completion Text"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="Completed: "/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="1.3"
+                android:scaleY="1.3"
+                android:layout_marginLeft="6dp"
+                android:checked="false"
+                android:id="@+id/reminder_completed_box"/>
+        </LinearLayout>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
